--- a/frontend/src/css/repository.module.scss
+++ b/frontend/src/css/repository.module.scss
@@ -446,7 +446,23 @@
 
 
 @media (max-height: 40rem) {
-  .mainShadowWrapper {
-    width: 100%;
-  }
+    .mainShadowWrapper {
+        width: 100%;
+    }
+}
+@media (max-width: 40rem) {
+    .mainShadowWrapper {
+        width: 100%;
+    }
+}
+
+@media (max-height: 40rem) {
+    .filesContainer {
+        width: 95%;
+    }
+}
+@media (max-width: 40rem) {
+    .filesContainer {
+        width: 95%;
+    }
 }
